--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="messageOie">
+    <div class="error-message">
         <h2>Oups ! Vous êtes tombé sur la case erreur {{ status_code }} !</h2>
         {% if status_code == 404 %}
         <h3>La page n'a pas été trouvée : retournez à la case départ !</h3>
