--- a/src/GameBundle/Resources/views/Admin/options_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/options_question.html.twig
@@ -21,7 +21,7 @@
 
     <h3>Les thèmes des questions</h3>
 
-    <div class=" center theme buttons">
+    <div class="center theme buttons">
       
       <div class="btn-group themes">
         <button type="button" class="btn btn-default">Voir les thèmes</button>
@@ -147,7 +147,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-offset-3 col-sm-6 formTheme">
+      <div class="col-sm-offset-3 col-sm-6 formTheme toHide">
         <h4>Ajout d'un nouveau thème</h4>
         <div class="well">
           {{ form_start(formTheme, {'attr': {'class': 'form-horizontal'}}) }}
@@ -172,7 +172,7 @@
         </div>
       </div>
 
-      <div class="col-sm-offset-3 col-sm-6 formTopic">
+      <div class="col-sm-offset-3 col-sm-6 formTopic toHide">
         <h4>Ajout d'une nouvelle sous-matière</h4>        
         <div class="well">
           {{ form_start(formTopic, {'attr': {'class': 'form-horizontal'}}) }}
