--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -36,16 +36,16 @@
         <p><a href=" {{ path('list_scores') }} ">CONSULTER LES SCORES</a></p>
     
     {% else %}
-      <div class="row accueil">
-        <div class="col-sm-offset-2 col-sm-2 para">
+      <div class="row home">
+        <div class="col-sm-offset-2 col-sm-2 home-text">
           <h4>Vous êtes élève ?</h4>
           <p>Et eodem impetu Domitianum praecipitem per scalas itidem funibus constrinxerunt, eosque coniunctos per ampla spatia civitatis acri raptavere discursu. iamque artuum et membrorum divulsa conpage superscandentes corpora mortuorum ad ultimam truncata deformitatem velut exsaturati mox abiecerunt in flumen.</p>
         </div>
-        <div class="col-sm-offset-1 col-sm-2 para">
+        <div class="col-sm-offset-1 col-sm-2 home-text">
           <h4>Vous êtes parent ?</h4>
           <p>Et eodem impetu Domitianum praecipitem per scalas itidem funibus constrinxerunt, eosque coniunctos per ampla spatia civitatis acri raptavere discursu. iamque artuum et membrorum divulsa conpage superscandentes corpora mortuorum ad ultimam truncata deformitatem velut exsaturati mox abiecerunt in flumen.</p>
         </div>
-        <div class="col-sm-offset-1 col-sm-2 para">
+        <div class="col-sm-offset-1 col-sm-2 home-text">
           <h4>Vous êtes enseignant ?</h4>
           <p>Et eodem impetu Domitianum praecipitem per scalas itidem funibus constrinxerunt, eosque coniunctos per ampla spatia civitatis acri raptavere discursu. iamque artuum et membrorum divulsa conpage superscandentes corpora mortuorum ad ultimam truncata deformitatem velut exsaturati mox abiecerunt in flumen.</p>
         </div>
