--- a/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
@@ -21,7 +21,7 @@
 
     <h3>Modération des questions</h3>
 
-    <div class="alert alert-danger infoQuestions">
+    <div class="alert alert-danger alert-info-questions">
       <h4><strong>Attention</strong></h4>
       <p>Pour garantir le bon déroulement du jeu, il doit y avoir suffisamment de questions.</p>
       <p>Dans l'idéal, pour une matière, il devrait y avoir au moins 10 questions par niveau scolaire.</p><br/>
