réduction code liste des scores

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -40,7 +40,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-3 center test">
+        <div class="col-lg-3 center">
             <h2>{{ title }}</h2>         
 
             <div class="message-info">
