--- a/web/GameBundle/main.css
+++ b/web/GameBundle/main.css
@@ -10,7 +10,7 @@ body {
     padding-bottom: 60px;
     --small-device-border: 5px solid white;
     --big-device-border: 10px solid white;
-    --couleur-button-play: #ff5314;
+    --color-button-play: orangered;
 }
 h1, h2, h3, h4 {
     text-align: center;
@@ -173,13 +173,13 @@ table.board td {
 /*play*/
 .play .btn-primary {
     color: white;
-    border: 1px solid var(--couleur-button-play);
+    border: 1px solid var(--color-button-play);
     background: linear-gradient(orangered, orange);
 }
 .play .btn-primary:hover {
-    color: var(--couleur-button-play);
+    color: var(--color-button-play);
     background: white;
-    border: 1px solid var(--couleur-button-play);
+    border: 1px solid var(--color-button-play);
 }
 .stats {
     display:inline-block; 
