--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -3,14 +3,23 @@
 {% block title %}Erreur en vue !{% endblock %}
 
 {% block body %}
+    <div class="error-page">
+    
+        <div class="error-message">
+            {% if status_code == null %}
+                <h2>Oups ! Vous êtes tombé sur une erreur !</h2>
+                <h3>{{ status_text }}</h3>                        
+            {% elseif status_code == 404 %}
+                <h2>La page n'a pas été trouvée : retournez à la case départ !</h2>
+            {% elseif status_code == 403 %}
+                <h2>Vous n'êtes pas autorisé à consulter la page.</h2>
+            {% else %}    
+                <h2>Oups ! Vous êtes tombé sur la case erreur {{ status_code }} !</h2>
+                <h3>{{ status_text }}</h3>                    
+            {% endif %}                
+        </div>
 
-    <div class="error-message">
-        <h2>Oups ! Vous êtes tombé sur la case erreur {{ status_code }} !</h2>
-        {% if status_code == 404 %}
-        <h3>La page n'a pas été trouvée : retournez à la case départ !</h3>
-        {% endif %}
+        <img src="{{ asset('GameBundle/images/oie.png') }}" alt="une oie" />
+        
     </div>
-
-    <img src="{{ asset('GameBundle/images/oie.png') }}" alt="une oie" />
-
 {% endblock %}
